Startpage: fix some ids

--- a/startpage.html
+++ b/startpage.html
@@ -42,7 +42,7 @@
                         </center>
                     </div>
                 </a>
-                <a href="https://cn.bing.com" target="_blank" id="link2bdtranslate">
+                <a href="https://cn.bing.com" target="_blank" id="link2bing">
                     <div class="linkto">
                         <center>
                             <img class="linkto-img" src="https://cn.bing.com/favicon.ico">
@@ -50,7 +50,7 @@
                         </center>
                     </div>
                 </a>
-                <a href="https://fsoufsou.com" target="_blank" id="link2bdtranslate">
+                <a href="https://fsoufsou.com" target="_blank" id="link2fsou">
                     <div class="linkto">
                         <center>
                             <img class="linkto-img" src="https://static.hetaousercontent.com/static/assets/favicon.ico">
@@ -58,7 +58,7 @@
                         </center>
                     </div>
                 </a>
-                <a href="https://fsoufsou.com/translate" target="_blank" id="link2bdtranslate">
+                <a href="https://fsoufsou.com/translate" target="_blank" id="link2fsoutranslate">
                     <div class="linkto">
                         <center>
                             <img class="linkto-img" src="https://static.hetaousercontent.com/static/assets/favicon.ico">
@@ -74,7 +74,7 @@
                         </center>
                     </div>
                 </a>
-                <a href="https://lgbbs.oiso.cf" target="_blank" id="link2luogu">
+                <a href="https://lgbbs.oiso.cf" target="_blank" id="link2lgbbs">
                     <div class="linkto">
                         <center>
                             <img class="linkto-img" src="https://www.luogu.com.cn/favicon.ico">
