Startpage: Improve the links

--- a/startpage.html
+++ b/startpage.html
@@ -58,14 +58,6 @@
                         </center>
                     </div>
                 </a>
-                <a href="https://fsoufsou.com/translate" target="_blank" id="link2fsoutranslate">
-                    <div class="linkto">
-                        <center>
-                            <img class="linkto-img" src="https://static.hetaousercontent.com/static/assets/favicon.ico">
-                            <p>F 翻译</p>
-                        </center>
-                    </div>
-                </a>
                 <a href="https://www.luogu.com.cn" target="_blank" id="link2luogu">
                     <div class="linkto">
                         <center>
@@ -103,6 +95,14 @@
                         <center>
                             <img class="linkto-img" src="https://atcoder.jp/favicon.ico">
                             <p>AtCoder</p>
+                        </center>
+                    </div>
+                </a>
+                <a href="https://vjudge.net" target="_blank" id="link2vjudge">
+                    <div class="linkto">
+                        <center>
+                            <img class="linkto-img" src="https://vjudge.net/favicon.ico">
+                            <p>Virtual Judge</p>
                         </center>
                     </div>
                 </a>
