Startpage: Add search engine, Baidu translate
I can't be sure that Baidu translate is really a search engine :(

--- a/startpage.html
+++ b/startpage.html
@@ -23,6 +23,7 @@
                     <option value="bing">必应</option>
                     <option value="fsou">F 搜</option>
                     <option value="moegirls">萌娘百科</option>
+                    <option value="bdtranslate">百度翻译</option>
                 </select>
             </p>
             <br><br><br>
