--- a/startpage.html
+++ b/startpage.html
@@ -111,5 +111,13 @@
                 </a>
             </div>
         </div>
+        <link rel="stylesheet" type="text/css" href="/live2d/waifu.css">
+        <div class="waifu" id="waifu" style="z-index: 99999999;">
+            <div class="waifu-tips"></div>
+            <canvas id="live2d" width="280" height="250" class="live2d"></canvas>
+        </div>
+        <script src="/live2d/live2d.js"></script>
+        <script src="/live2d/waifu-tips.js"></script>
+        <script type="text/javascript">initModel()</script>
     </body>
 </html>
