--- a/startpage.html
+++ b/startpage.html
@@ -2,122 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Heyc's Startpage</title>
-        <link rel="stylesheet" href="/style.css">
-        <link rel="stylesheet" href="/search.css">
-        <link rel="stylesheet" href="/linkto.css">
-        <script src="/search.js"></script>
+        <meta http-equiv="refresh" content="3; url=/startpage/index.html">
     </head>
     <body>
-        <div class="over-main" id="over-main"></div>
-        <div class="main" id="main">
-            <p><h1 id="main-header">Heyc's Startpage</h1></p>
-            <br>
-            <div class="search" id="search">
-                <input class="searchbox" id="search-box" type="text" placeholder="使用 百度 搜索" oninput="searchtext_change()">
-                <button class="searchbutton" id="search-button" onclick="redirect()">Go!</button>
-                <p>
-                    搜索引擎：
-                    <select id="select-engine" onchange="searchengine_change()">
-                        <option value="baidu" selected>百度</option>
-                        <option value="bing">必应</option>
-                        <option value="fsou">F 搜</option>
-                        <option value="moegirls">萌娘百科</option>
-                        <option value="bdtranslate">百度翻译</option>
-                    </select>
-                </p>
-            </div>
-            <br><br><br>
-            <div class="links" id="links">
-                <a href="https://www.baidu.com" target="_blank" id="link2baidu">
-                    <div class="linkto">
-                        <center>
-                            <img class="linkto-img" src="https://www.baidu.com/favicon.ico">
-                            <p>百度搜索</p>
-                        </center>
-                    </div>
-                </a>
-                <a href="https://fanyi.baidu.com" target="_blank" id="link2bdtranslate">
-                    <div class="linkto">
-                        <center>
-                            <img class="linkto-img" src="https://fanyi.baidu.com/favicon.ico">
-                            <p>百度翻译</p>
-                        </center>
-                    </div>
-                </a>
-                <a href="https://cn.bing.com" target="_blank" id="link2bing">
-                    <div class="linkto">
-                        <center>
-                            <img class="linkto-img" src="https://cn.bing.com/favicon.ico">
-                            <p>必应 / Bing</p>
-                        </center>
-                    </div>
-                </a>
-                <a href="https://fsoufsou.com" target="_blank" id="link2fsou">
-                    <div class="linkto">
-                        <center>
-                            <img class="linkto-img" src="https://static.hetaousercontent.com/static/assets/favicon.ico">
-                            <p>F 搜</p>
-                        </center>
-                    </div>
-                </a>
-                <a href="https://www.luogu.com.cn" target="_blank" id="link2luogu">
-                    <div class="linkto">
-                        <center>
-                            <img class="linkto-img" src="https://www.luogu.com.cn/favicon.ico">
-                            <p>洛谷</p>
-                        </center>
-                    </div>
-                </a>
-                <a href="https://lgbbs.oiso.cf" target="_blank" id="link2lgbbs">
-                    <div class="linkto">
-                        <center>
-                            <img class="linkto-img" src="https://www.luogu.com.cn/favicon.ico">
-                            <p>洛谷帖子保存站</p>
-                        </center>
-                    </div>
-                </a>
-                <a href="https://hydro.ac" target="_blank" id="link2hydro">
-                    <div class="linkto">
-                        <center>
-                            <img class="linkto-img" src="https://hydro.ac/favicon.ico">
-                            <p>Hydro</p>
-                        </center>
-                    </div>
-                </a>
-                <a href="https://codeforces.com" target="_blank" id="link2codeforces">
-                    <div class="linkto">
-                        <center>
-                            <img class="linkto-img" src="https://codeforces.com/favicon.ico">
-                            <p>Codeforces</p>
-                        </center>
-                    </div>
-                </a>
-                <a href="https://atcoder.jp" target="_blank" id="link2atcoder">
-                    <div class="linkto">
-                        <center>
-                            <img class="linkto-img" src="https://atcoder.jp/favicon.ico">
-                            <p>AtCoder</p>
-                        </center>
-                    </div>
-                </a>
-                <a href="https://vjudge.net" target="_blank" id="link2vjudge">
-                    <div class="linkto">
-                        <center>
-                            <img class="linkto-img" src="https://vjudge.net/favicon.ico">
-                            <p>Virtual Judge</p>
-                        </center>
-                    </div>
-                </a>
-            </div>
-        </div>
-        <link rel="stylesheet" type="text/css" href="/live2d/waifu.css">
-        <div class="waifu" id="waifu" style="z-index: 99999999;">
-            <div class="waifu-tips"></div>
-            <canvas id="live2d" width="280" height="250" class="live2d"></canvas>
-        </div>
-        <script src="/live2d/live2d.js"></script>
-        <script src="/live2d/waifu-tips.js"></script>
-        <script type="text/javascript">initModel()</script>
+        <center>
+            <h1>此页面已迁移</h1>
+            <hr>
+            <p>3 秒后跳转</p>
+        </center>
     </body>
 </html>
