--- a/startpage/settings.html
+++ b/startpage/settings.html
@@ -6,7 +6,8 @@
         <link rel="stylesheet" href="/files/startpage.css">
         <link rel="stylesheet" href="/files/startpage-settings.css">
         <script src="/files/cookies.js"></script>
-        <script src="/files/startpage-theme.js"></script>
+        <script src="/files/startpage-settings.js"></script>
+        <script src="/files/startpage-customize.js"></script>
     </head>
     <body>
         <a href="/startpage/index.html">
@@ -16,31 +17,59 @@
         </a>
         <div class="main2" id="main2">
             <center><h1>Heyc's Startpage 设置</h1></center>
-            <div class="info">
+            <div class="box">
                 <h3><img src="/img/info.png" height="20px" width="20px"> 提示</h3>
                 <div class="inbox">
                     <p>我们使用 Cookies 保存设置，在此页点击 保存设置 按钮则表示您同意 Cookies 的使用。</p>
                 </div>
             </div>
-            <div id="settings" style="margin-top: 20px; margin-bottom: 20px;">
-                <p><label><input type="checkbox" id="darkmode" name="darkmode">夜间模式</label></p>
-                <p>
-                    默认搜索引擎：
-                    <select id="default-engine">
-                        <option value="baidu" selected>百度</option>
-                        <option value="bing">必应</option>
-                        <option value="fsou">F 搜</option>
-                        <option value="moegirls">萌娘百科</option>
-                        <option value="bdtranslate">百度翻译</option>
-                    </select>
-                </p>
+            <div id="settings">
+                <br>
+                <div class="box">
+                    <h3>常规设置</h3>
+                    <div class="inbox">
+                        <p><label><input type="checkbox" id="darkmode" name="darkmode">夜间模式</label></p>
+                        <p>
+                            默认搜索引擎：
+                            <select id="default-engine">
+                                <option value="baidu" selected>百度</option>
+                                <option value="bing">必应</option>
+                                <option value="fsou">F 搜</option>
+                                <option value="moegirls">萌娘百科</option>
+                                <option value="bdtranslate">百度翻译</option>
+                            </select>
+                        </p>
+                    </div>
+                </div>
+                <br>
+                <div class="box">
+                    <h3>添加链接</h3>
+                    <div class="inbox">
+                        <p><img src="/img/info.png" height="15px" width="15px"> 提示：一行显示 10 个链接，请注意排版。</p>
+                        <p>显示文字：<input type="text" id="newlink-name"></p>
+                        <p>目标链接：<input type="text" id="newlink-to" oninput="links_urlchanged()"></p>
+                        <p>显示图标：<input type="text" id="newlink-icon"></p>
+                    </div>
+                    <center><button id="add" onclick="links_add()">添加链接</button></center>
+                </div>
+                <br>
+                <div class="box">
+                    <h3>管理链接</h3>
+                    <div class="inbox" id="links">
+                    </div>
+                    <center><button id="del" onclick="links_del()">删除选中</button> <button id="dft" onclick="links_dft()">恢复默认</button></center>
+                </div>
             </div>
-            <center><button id="save" onclick="startpage_setcookies()">保存设置</button></center>
+            <br>
+            <center><button id="save" onclick="settings_save()">保存设置</button></center>
+            <br>
         </div>
         <script type="text/javascript">
-            updtheme();
-            updtexttheme();
-            loadsettings();
+            theme_upd();
+            texttheme_upd();
+            settings_load();
+            links_read();
+            links_load_settings();
         </script>
     </body>
 </html>
