Index: Add LICENSE warning

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <div id="proj">
                 <p><a href="/startpage/index.html" class="a-no-decoration">Heyc's Startpage 浏览器起始页 | 点击跳转 -></a></p>
             </div>
+            <div id="warning" style="color: #e74c3c;">
+                <p><b>请注意：所有项目均使用 <a href="https://www.gnu.org/licenses/gpl-3.0.html" class="a-no-decoration">GPL-3.0</a> 许可证！</b></p>
+            </div>
         </div>
         <div class="right" id="right">
             <div id="fr-links">
